--- a/tour-details/assets/css/style.css
+++ b/tour-details/assets/css/style.css
@@ -1,7 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700&family=Markazi+Text:wght@500&family=Oswald:wght@200;300;400;500;600;700&family=Rokkitt:wght@100&display=swap");
 
-html {
-}
+html {}
 
 * {
   font-family: "Manrope", sans-serif;
@@ -9,8 +8,7 @@ html {
   font-size: 15px;
 }
 
-h1 {
-}
+h1 {}
 
 .title {
   font-size: 30px;
@@ -50,6 +48,7 @@ h1 {
   grid-column: 4/5;
   grid-row: 1/3;
 }
+
 .layout-item:nth-child(3) {
   grid-column: 1/3;
   grid-row: 3/4;
@@ -74,7 +73,7 @@ h1 {
 }
 
 .destination {
-  border: 1px solid #016c8d;
+  border: 1px solid #ececec;
   border-radius: 10px;
 }
 
@@ -87,11 +86,12 @@ h1 {
 }
 
 .destination-item .duration {
-  margin-bottom: 0;
+  margin-bottom: 6px;
 }
 
 .destination-item .detail {
   margin-top: 0;
+  margin-bottom: 0;
 }
 
 .container {
@@ -148,6 +148,7 @@ h1 {
 .map-tour {
   width: 100%;
 }
+
 .map-header {
   text-align: left;
 }
@@ -214,4 +215,58 @@ h1 {
 .feedback-content-detail-bottom p {
   margin: 0;
   margin-top: -10px;
+}
+
+
+/*------------------------------*/
+
+/* .destination {
+  position: relative;
+}
+
+.destination::before {
+  content: "";
+  position: absolute;
+  width: 6px;
+  background-color: #e12d36;
+  top: 0;
+  bottom: 0;
+  left: 5%;
+  margin-left: -3px;
+} */
+
+.destination li {
+  position: relative;
+  padding-bottom: 18px;
+  list-style: none;
+
+}
+
+.destination li::after {
+  content: ' ';
+  position: absolute;
+  top: 18px;
+  left: -13.5px;
+  width: 1px;
+  height: 100%;
+  border-right: 2px dashed #ccc;
+  z-index: 0;
+}
+
+.destination li::before {
+  content: " ";
+  font-size: 11px;
+  font-weight: 900;
+  background-color: rgb(136, 136, 136);
+  left: -17px;
+  top: 5px;
+  z-index: 1;
+  width: 11px;
+  height: 11px;
+  border-radius: 50px;
+  position: absolute;
+}
+
+.destination li:last-child:after {
+  height: 0px;
 }
