--- a/tour-details/assets/css/DetailTourCSS/style.css
+++ b/tour-details/assets/css/DetailTourCSS/style.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700&family=Markazi+Text:wght@500&family=Oswald:wght@200;300;400;500;600;700&family=Rokkitt:wght@100&display=swap");
 
-html {}
+html {
+}
 
 * {
   font-family: "Manrope", sans-serif;
@@ -8,10 +9,11 @@ html {}
   font-size: 15px;
 }
 
-h1 {}
+h1 {
+}
 
 .title {
-  font-size: 30px;
+  font-size: 35px;
   margin-bottom: 0;
 }
 
@@ -28,7 +30,7 @@ h1 {}
 .layout {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 200px 100px 200px;
+  grid-template-rows: 170px 100px 320px;
   gap: 20px;
   padding: 10px 0px;
   justify-self: center;
@@ -40,16 +42,20 @@ h1 {}
 }
 
 .layout-item:first-child {
-  grid-column: 1/4;
+  grid-column: 1/3;
   grid-row: 1/3;
 }
 
 .layout-item:nth-child(2) {
-  grid-column: 4/5;
+  grid-column: 3/4;
   grid-row: 1/3;
 }
 
 .layout-item:nth-child(3) {
+  grid-column: 4/5;
+  grid-row: 1/3;
+}
+.layout-item:nth-child(4) {
   grid-column: 1/3;
   grid-row: 3/4;
 }
@@ -139,6 +145,7 @@ h1 {}
 
 .btn .contact_btn,
 .book_btn {
+  width: 120px;
   margin: 10px 30px;
   border: 2px solid #e12d36;
   background-color: white;
@@ -206,6 +213,7 @@ h1 {}
 
 .feedback-content-detail-top {
   display: flex;
+  margin: -10px 0px 0px;
 }
 
 .feedback-content-detail-top h3 {
@@ -216,7 +224,6 @@ h1 {}
   margin: 0;
   margin-top: -10px;
 }
-
 
 /*------------------------------*/
 
@@ -239,11 +246,10 @@ h1 {}
   position: relative;
   padding-bottom: 18px;
   list-style: none;
-
 }
 
 .destination li::after {
-  content: ' ';
+  content: " ";
   position: absolute;
   top: 18px;
   left: -13.5px;
@@ -270,3 +276,146 @@ h1 {}
 .destination li:last-child:after {
   height: 0px;
 }
+
+/* Start: Logo And Search */
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header .logo {
+  width: 225px;
+  flex: 19% 0 0;
+  margin-right: 30px;
+}
+header .logo a {
+  display: block;
+  padding: 14px 0;
+}
+header .logo img {
+  aspect-ratio: auto;
+  width: 100%;
+  height: auto;
+}
+/* header .search-bar{
+    flex: 25% 0 0;
+    padding: 16px 0;
+}
+header .search-bar .form-control{
+    border-radius: 30px;
+    background-color: #f5f5f5;
+    border: none;
+    padding-left: 45px;
+    height: 42px;
+}
+header .search-bar .form-control:focus{
+    color: #333;
+}
+header .search-bar form{
+    position: relative;
+}
+header .search-bar form i.fas{
+    position: absolute;
+    font-size: 20px;
+    top: 10px;
+    left: 14px;
+    opacity: .5;
+} */
+
+header .nav-menu-responsive {
+  display: none;
+}
+header .btn-toggle-menu,
+header .btn-toggle-search {
+  display: none;
+}
+header .nav-menu {
+  display: flex;
+  align-content: center;
+}
+header .nav-menu .main-menu {
+  float: right;
+  list-style: none;
+  padding-left: 0;
+  margin-bottom: 0;
+}
+header .nav-menu .menu-item {
+  float: left;
+}
+header .nav-menu .menu-item a {
+  color: #333;
+  text-transform: uppercase;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 29px 20px;
+  display: block;
+}
+header .nav-menu .menu-item a:hover,
+header .nav-menu .menu-item a:focus {
+  text-decoration: none;
+  color: #008579;
+}
+header .login-btn {
+  height: 32px;
+  width: 120px;
+  background: #008579;
+  padding: 4px 16px;
+  border-radius: 30px;
+  border: none;
+  /* border-radius: 30px;
+    height: 42px;
+    padding: 0 25px;
+    line-height: 42px; */
+}
+header .login-btn a {
+  font-size: 14px;
+  text-decoration: none;
+  font-weight: bold;
+  color: white;
+  text-transform: uppercase;
+}
+a,
+button,
+.btn {
+  font-family: "Manrope", sans-serif !important;
+  font-weight: 500;
+}
+.btn {
+  border-radius: 30px;
+  height: 42px;
+  padding: 0 25px;
+  line-height: 42px;
+}
+.btn-default {
+  background-color: #008579;
+  color: white;
+  font-weight: bold;
+}
+
+.menu-item a {
+  text-decoration: none;
+}
+h1 {
+  font-family: "Manrope", sans-serif;
+  font-weight: 700;
+}
+h2 {
+  font-family: "Manrope", sans-serif;
+  font-weight: 700;
+}
+h3 {
+  font-family: "Manrope", sans-serif;
+  font-weight: 700;
+}
+h4 {
+  font-family: "Manrope", sans-serif;
+  font-weight: 700;
+}
+h5 {
+  font-family: "Manrope", sans-serif;
+  font-weight: 700;
+}
+
+/* Footer */
+
+/* Footer */
