--- a/login/assets/css/styleindex.css
+++ b/login/assets/css/styleindex.css
@@ -1,11 +1,260 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700&family=Markazi+Text:wght@500&family=Oswald:wght@200;300;400;500;600;700&family=Rokkitt:wght@100&display=swap");
+*{
+    font-family: "Manrope", sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: #f5f5f5;
+}
+header{
+    background-color: #fff;
+    padding: 0 30px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.35);
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    align-items: center;
+}
+/* Start: Logo And Search */
+header .logo{
+    width: 225px;
+    flex: 19% 0 0;
+    margin-right: 30px;
+}
+header .logo a{
+    display: block;
+    padding: 14px 0;
+}
+header .logo img{
+    aspect-ratio: auto;
+    width: 100%;
+    height: auto;
+}
+/* header .search-bar{
+    flex: 25% 0 0;
+    padding: 16px 0;
+}
+header .search-bar .form-control{
+    border-radius: 30px;
+    background-color: #f5f5f5;
+    border: none;
+    padding-left: 45px;
+    height: 42px;
+}
+header .search-bar .form-control:focus{
+    color: #333;
+}
+header .search-bar form{
+    position: relative;
+}
+header .search-bar form i.fas{
+    position: absolute;
+    font-size: 20px;
+    top: 10px;
+    left: 14px;
+    opacity: .5;
+} */
+header .nav-menu-responsive{
+    display: none;
+}
+header .btn-toggle-menu, header .btn-toggle-search{
+    display: none;
+}
+header .nav-menu{
+    display: flex;
+    align-content: center;
+}
+header .nav-menu .main-menu{
+    float: right;
+    list-style: none;
+    padding-left: 0;
+    margin-bottom: 0;
+}
+header .nav-menu .menu-item{
+    float: left;
+}
+header .nav-menu .menu-item a{
+    color: #333;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 29px 20px;
+    display: block;
+}
+header .nav-menu .menu-item a:hover, header .nav-menu .menu-item a:focus {
+    text-decoration: none;
+    color: #008579;
+}
+header .login-btn {
+    height: 32px;
+    width: 120px;
+    background: #008579;
+    padding: 4px 16px;
+    border-radius: 30px;
+    border: none; 
+    /* border-radius: 30px;
+    height: 42px;
+    padding: 0 25px;
+    line-height: 42px; */
+}
+header .login-btn a{
+    font-size: 14px;
+    text-decoration: none;
+    font-weight: bold;
+    color: white;
+    text-transform: uppercase;
+}
+a, button, .btn {
+    font-family: 'Manrope', sans-serif !important;
+    font-weight: 500; 
+}
+.btn {
+    border-radius: 30px;
+    height: 42px;
+    padding: 0 25px;
+    line-height: 42px; 
+}
+.btn-default {
+    background-color: #008579;
+    color: white;
+    font-weight: bold; 
+}
+footer {
+    background-image: url(../image/footer.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 70px 0 50px;
+    width: 100%;
+    height: 100%; 
+}
+footer * {
+    color: rgba(255, 255, 255, 0.97); 
+}
+footer .logo-footer {
+    width: 175px;
+    margin-bottom: 30px; 
+}
+footer .logo-footer a {
+    display: block; 
+}
+footer .logo-footer img {
+    width: 100%;
+    height: auto; 
+}
+footer .social {
+    width: 34px;
+    height: 34px;
+    border-radius: 50%;
+    border: 1px solid white;
+    text-align: center;
+    display: inline-block;
+    margin-right: 6px; 
+}
+footer .social i {
+    font-size: 15px;
+    line-height: 34px; 
+}
+footer .copyright {
+    font-size: 14px;
+    font-family: 'Manrope', sans-serif;
+    font-weight: bold; 
+}
+footer .title-col {
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 18px;
+    margin-bottom: 35px;
+    letter-spacing: 1px; 
+}
+footer .quick-links {
+    list-style: none;
+    margin: 10px -1px; 
+    padding: 0; 
+}
+footer .quick-links li {
+    margin-bottom: 12px; 
+}
+footer .quick-links li:last-child {
+    margin-bottom: 0; 
+}
+footer .quick-links a {
+    display: inline-block;
+    font-size: 16px;
+    font-weight: 400; 
+}
+footer .quick-links a:hover, footer .quick-links a:focus {
+    color: white; 
+}
+footer .contact-info {
+    list-style: none;
+    padding: 0;
+    margin: 10px -20px; 
+}
+footer .contact-info li {
+    margin-bottom: 12px;
+    font-weight: 400; 
+}
+footer .contact-info li:last-child {
+    margin-bottom: 0; 
+}
+footer .contact-info li i {
+    margin-right: 10px;
+    text-align: center;
+    width: 20px;
+    color: #008579; 
+}
+footer .page-links {
+    text-align: center;
+    padding-top: 70px; 
+}
+footer .page-links ul {
+    list-style: none;
+    padding: 0;
+    margin: 0; 
+}
+footer .page-links ul li {
+    display: inline-block; 
+}
+footer .page-links ul li:before {
+    content: '\f111';
+    font-family: "Font Awesome 5 Free";
+    font-size: 6px;
+    display: inline-block;
+    margin-right: 10px;
+    position: relative;
+    top: -2px;
+    opacity: .5;
+    margin-left: 10px; 
+}
+footer .page-links ul li:first-child:before {
+    display: none; 
+}
+footer .page-links ul li a {
+    display: inline-block;
+    font-weight: 400;
+    font-size: 12px;
+    text-transform: uppercase; 
+}
+footer .page-links ul li a:hover, footer .page-links ul li a:focus {
+    opacity: 1;
+    color: white; 
+}   
 html,
 body {}
 
 .wrapper {
     display: flex;
     justify-content: center;
-
 }
+
+/* *{
+   padding: 0;
+   margin: 0;
+   box-sizing: border-box;
+   font-size: 14px; 
+} */
 
 .wrapper-login {
     position: relative;
@@ -13,9 +262,12 @@ body {}
     flex-direction: column;
     justify-content: center;
     justify-items: center;
-    margin-top: 60px;
+    margin: 30px 0;
     width: 550px;
     align-items: center;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    height: 820px;
+    border-radius: 30px;
 }
 
 .login-header {
@@ -31,6 +283,7 @@ body {}
     line-height: 24px;
     margin: 0px 0px 8px;
     text-align: center;
+    font-size: 27px;
 }
 
 .login-header-detail h1 {
@@ -40,6 +293,7 @@ body {}
     font-weight: 700;
     line-height: 50px;
     text-align: center;
+    font-size: 28px;
 }
 
 .login-option a{
@@ -79,9 +333,19 @@ body {}
 
 .login-button,
 .register-button {
-    width: 120px;
-    height: 50px;
+    width: 185px;
+    height: 56px;
     border: none;
+ 
+}
+
+.login-button a,
+.register-button a{
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 24px;
+    padding: 16px;
+    text-align: center;
 }
 
 /* .login-option a {
@@ -120,7 +384,7 @@ body {}
 
 .login-body {
     text-align: center;
-    width: 240px;
+    width: 370px;
     
 }
 
@@ -134,9 +398,9 @@ body {}
     color: #2d4271;
     display: inline-block;
     font-family: Manrope;
-    font-weight: 700px;
-    line-height: 24px;
-    font-size: 15px;
+    font-weight: 600;
+    line-height: 30px;
+    font-size: 18px;
     margin: 0px 0px 8px;
     text-align: left;
 }
@@ -146,20 +410,27 @@ body {}
     border-radius: 4px;
     color: #2d4271;
     font-family: Manrope;
-    line-height: 28px;
-    padding-right: 64px;
+    line-height: 24px;
+    padding-right: 190px;
     border: groove;
+    height: 28px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 15px;
+    
 }
 
 .login-form-password label {
     color: #2d4271;
-    font-size: 15px;
+    font-size: 18px;
     display: inline-block;
     font-family: Manrope;
-    font-weight: 700px;
-    line-height: 28px;
+    font-weight: 600;
+    line-height: 24px;
     margin: 0px 0px 8px;
     text-align: left;
+    
+  
 }
 
 .login-form-password input {
@@ -168,8 +439,12 @@ body {}
     color: #2d4271;
     font-family: Manrope;
     line-height: 24px;
-    padding-right: 64px;
+    padding-right: 190px;
     border: groove;
+    height: 28px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    font-size: 15px;
 }
 
 .press-login {
@@ -181,13 +456,21 @@ body {}
     color: #ffffff;
     display: inline-block;
     font-family: Manrope;
-    font-weight: 700;
     line-height: 24px;
     margin-top: 10px;
-    padding: 15px 74px;
+    padding: 15px 140px;
     text-align: center;
-
+    font-weight: 700;
 }
+
+
+
+/* .press-login i {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 8rem;
+} */
 
 .form-divider {
     color: #2d4271;
@@ -209,7 +492,7 @@ body {}
     font-size: 15px;
 
 }
-
+/* 
 .btn-facebook {
     border: 0.5px none #4267b2;
     background-color: #4267b2;
@@ -217,7 +500,7 @@ body {}
     margin: 0 10px;
     
     padding: 15px;
-}
+} */
 
 .btn-facebook a {
     color: white;
