Upload Tour List

--- a/tour-details/assets/css/homepage.css
+++ b/tour-details/assets/css/homepage.css
@@ -386,7 +386,7 @@ h5 {
     height: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px; 
-    object-fit: contain;
+    /* object-fit: contain; */
     object-position: center;
 }
 .tour-item .thumb a {
