Đổi link ảnh thành link firebase

--- a/tour-details/assets/css/header_footer.css
+++ b/tour-details/assets/css/header_footer.css
@@ -149,7 +149,7 @@ h5 {
     color: #e12d36; 
 }
 footer {
-    background-image: url(../../assets/image/footer.jpg);
+    background-image: url(https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Ffooter.jpg?alt=media&token=865435f2-5988-4cfd-9f85-498ce5725ce3&_gl=1*1p90meu*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwNzk3Ni4wLjAuMA..);
     background-repeat: no-repeat;
     background-size: cover;
     padding: 70px 0 50px;
