--- a/tour-details/assets/css/homepage.css
+++ b/tour-details/assets/css/homepage.css
@@ -228,7 +228,7 @@ h5 {
 }
 .about {
     text-align: center;
-    background-image: url(../../assets/Image/img-1.jpg);
+    background-image: url(https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fimg-1.jpg?alt=media&token=f1ef0d1c-59bc-450e-a59d-fae98466aced&_gl=1*fcy54s*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODU0NC4wLjAuMA..);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -242,7 +242,7 @@ h5 {
     left: 0;
     width: 100%;
     height: 80px;
-    background-image: url(../../assets/Image/bg-gray.png);
+    background-image: url(https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fbg-gray.png?alt=media&token=6c83bcce-0ce5-423e-a582-240524722ea6&_gl=1*j1w9sk*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODU2Mi4wLjAuMA..);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-position: center; }
