--- a/tour-details/assets/css/tourlist.css
+++ b/tour-details/assets/css/tourlist.css
@@ -63,7 +63,7 @@ h5 {
     opacity: .7; 
 }
 .category-header {
-    background: url(../../assets/image/bg-cate.jpg) no-repeat center;
+    background: url(https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fbg-cate.jpg?alt=media&token=ac753111-cf28-4ec6-beae-da92b0b6c05d&_gl=1*batoxz*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NTgwNzc3NC40LjEuMTY4NTgwODY5MS4wLjAuMA..) no-repeat center;
     background-size: cover;
     height: 320px;
     position: relative;
