--- a/assets/css/UserProfile.css/stylechange-pass.css
+++ b/assets/css/UserProfile.css/stylechange-pass.css
@@ -140,7 +140,7 @@ li {
     display: inline-flex;
 
     font-size: 13.125px;
-    margin: 1px 0px 0px 20px;
+    /* margin: 1px 0px 0px 20px; */
     padding: 3px 8px;
     text-align: left;
 }
@@ -150,8 +150,8 @@ li {
 }
 
 .wrapper-left {
-    border: groove white;
-    border-radius: 5%;
+    border: 0.5px solid #d5d5d5;
+    border-radius: 14px;
     padding: 25px;
 }
 
@@ -164,8 +164,8 @@ li {
 }
 
 .wrapper-right {
-    border: groove white;
-    border-radius: 5%;
+    border: 0.5px solid #d5d5d5;
+    border-radius: 14px;
     padding: 24px;
 }
 
