--- a/tour-details/assets/css/homepage.css
+++ b/tour-details/assets/css/homepage.css
@@ -150,6 +150,7 @@ a, button, .btn {
     color: white;
     font-weight: bold; 
 }
+
 h1 {
     font-family: "Manrope", sans-serif;
     font-weight: 700; 
@@ -199,6 +200,26 @@ h5 {
 .top-tour .tour-list {
       margin-top: 50px; 
 }
+/* .top-tour .other .btn {
+    border-radius: 30px;
+    height: 40px;
+    padding: 0 10px;
+    line-height: 40px; 
+    margin-top: 10px;
+}
+.top-tour .other .btn-default {
+    background-color: #008579;
+    color: white;
+    font-weight: 400; 
+}
+.top-tour .other{
+    height: 32px;
+    width: 120px;
+    background: #008579;
+    padding: 4px 16px;
+    border-radius: 30px;
+    border: none; 
+} */
 .targets {
     background-color: #f5f5f5;
     padding: 50px 0; 
@@ -316,10 +337,10 @@ h5 {
 .slides .slide-text * {
     color: white; 
 }
-.slides .slide-text .mouse-icon {
+/* .slides .slide-text .mouse-icon {
     display: inline-block;
     margin-bottom: 30px;
-    /* background-image: url(../../assets/image/mouse-icon.png); */
+    background-image: url(../../assets/image/mouse-icon.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -327,7 +348,7 @@ h5 {
     height: 36px;
     -webkit-animation: updown 1.6s infinite ease-in-out;
     animation: updown 1.6s infinite ease-in-out; 
-}
+} */
 .slides .slide-text .slide-h1, .slides .slide-text .slide-p {
     text-transform: uppercase;
     letter-spacing: 1.5px; 
@@ -369,7 +390,27 @@ h5 {
 .owl-carousel button.owl-next {
     right: -45px; 
 }
-  
+/* 
+#slider{
+    margin-top: calc(80px + 45px);
+}
+
+.owl-dots{
+    position: absolute;
+    right: 30px;
+    bottom: 5px;
+}
+
+.owl-dot:focus{
+    outline: none;
+}
+
+#slider img{
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+} */
+
 .tour-item {
     border-radius: 10px;
     background-color: #fff; 
