--- a/assets/css/AboutCSS/about.css
+++ b/assets/css/AboutCSS/about.css
@@ -1,6 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700&family=Markazi+Text:wght@500&family=Oswald:wght@200;300;400;500;600;700&family=Rokkitt:wght@100&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700&family=Markazi+Text:wght@500&family=Oswald:wght@200;300;400;500;600;700&family=Rokkitt:wght@100&display=swap"); */
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;300&display=swap');
+
+
 *{
-    font-family: "Manrope", sans-serif;
+    font-family: 'Be Vietnam Pro', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,22 +14,22 @@ body{
 }
 /* Start Category header */
 .category-header {
-    background: url(../../assets/image/bg-cate.jpg) no-repeat center;
+    background: url(https://firebasestorage.googleapis.com/v0/b/nha-trang-nature-elite.appspot.com/o/Images%20For%20Logo%20-%20Sliders%20-%20Other%2FTrang%20ch%E1%BB%A7%2Fbg-cate.jpg?alt=media&token=ac753111-cf28-4ec6-beae-da92b0b6c05d&_gl=1*1x16595*_ga*MTEyNjY4OTYyMi4xNjgzNzM0MDMx*_ga_CW55HF8NVT*MTY4NjQwNTU2My4xNi4xLjE2ODY0MDU1NzIuMC4wLjA.) no-repeat center;
     background-size: cover;
-    height: 320px;
+    height: 370px;
     position: relative;
-    background-color: #aaa; 
 }
 .category-header * {
     color: white; 
 }
 .category-title {
-    font-size: 45px;
+    font-weight: 600;
+    font-size: 40px;
     text-transform: uppercase;
     text-align: center;
     position: absolute;
     width: 100%;
-    top: 50%;
+    top: 60%;
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
     transform: translateY(-50%); 
@@ -38,7 +42,7 @@ body{
     opacity: .4; 
 }
 .breadcrumb-item a:hover, .breadcrumb-item a:focus {
-    color: #1ec6b6;
+    color: tomato;
     text-decoration: none; 
 }
 .breadcrumb-item.active, .breadcrumb-item a, .breadcrumb-item {
@@ -102,10 +106,10 @@ body{
 .content-element .title-element {
     margin-left: -25px;
     margin-top: 35px;
-    font-family: 'Manrope', sans-serif !important; 
+    font-family: 'Be Vietnam Pro', sans-serif;
 }
 .content-element .title-element * {
-    font-family: 'Manrope', sans-serif !important; 
+    font-family: 'Be Vietnam Pro', sans-serif;
 }
 .content-element img {
     max-width: 100%;
@@ -115,8 +119,12 @@ body{
     margin-left: auto;
     margin-right: auto; 
 }
+.content-element .title-element span{
+    color: tomato;
+    font-weight: 700;
+}
 .content-element h2, .content-element h3, .content-element h4, .content-element h5, .content-element p, .content-element span, .content-element a, .content-element li {
-    font-family: 'Manrope', sans-serif; 
+    font-family: 'Be Vietnam Pro', sans-serif;
 }
 .content-element h2 {
     margin-bottom: 20px; 
@@ -283,8 +291,16 @@ body{
     margin-bottom: 30px;
     text-transform: capitalize; 
 }
-.about-content-1 p, .about-content-2 p, .about-content-3 p, .about-content-4 p, .about-content-5 p {
+.about-content-1 p, .about-content-2 p, .about-content-4 p, .about-content-5 p {
     padding-left: 15%;
+    padding-right: 15%;
+    font-size: 18px;
+    line-height: 1.7;
+    margin-bottom: 30px; 
+    text-align: justify;
+}
+.about-content-3 p{
+    padding-left: 21%;
     padding-right: 15%;
     font-size: 18px;
     line-height: 1.7;
@@ -335,7 +351,7 @@ body{
 }
 .target:hover .icon {
     color: white;
-    background-color: #1ec6b6;
+    background-color: tomato;
     box-shadow: 0 0 0 8px rgba(30, 198, 182, 0.15); 
 }
 .target .icon {
@@ -346,7 +362,7 @@ body{
     margin-right: auto;
     border-radius: 50%;
     background-color: #fafafa;
-    color: #1ec6b6;
+    color: #000;
     box-shadow: 0 0 0 10px rgba(0, 0, 0, 0.04);
     margin-bottom: 40px;
     -moz-transition: all 0.15s ease;
