--- a/assets/css/HomePageCSS/homepage_new.css
+++ b/assets/css/HomePageCSS/homepage_new.css
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100;300&display=swap');
 *{
+    font-family: 'Be Vietnam Pro', sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -251,7 +253,7 @@
     padding: 10px 15px;
     color: black;
     font-size: 14px;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .header__nav-item a:hover{
@@ -501,6 +503,7 @@
     font-size: 20px;
     margin-bottom: 15px; 
     color: #000;
+    font-weight: 600;
 }
 .content__targets .target p {
     /* font-family: 'Manrope', sans-serif; */
@@ -796,7 +799,7 @@
     font-weight: 400;
     color: #fff;
 }
-.s-stats {
+/* .s-stats {
     padding-top: 4.2rem;
     padding-bottom: 4.2rem;
     background-color: #050505;
@@ -887,4 +890,4 @@
 .block-1-6 .col-block:nth-child(6n+1),.block-1-5 .col-block:nth-child(5n+1),.block-1-4 .col-block:nth-child(4n+1),.block-1-3 .col-block:nth-child(3n+1),.block-1-2 .col-block:nth-child(2n+1) {
     clear: both
 }
-
+ */
